package org.switch2022.project.ddd;

public interface AggregateRoot <ID extends DomainId> extends DomainEntity<ID> {
}
