@startuml
skinparam linetype ortho

class ListProjectController {
listProject()
}

class ProjectService {
listProject()
}

class ProjectRepository {
findAll()
}

class ProjectMapper {
toDTO (projectDDD)
toDTOList (lsProject)
}

interface DomainID {
}

interface Repository {
}

interface AggregateRoot {
}

interface DomainEntity {
}

ListProjectController "1" o--"1" ProjectService
ProjectService ..> ProjectMapper
ProjectMapper ..> Project

ProjectService ..> ProjectRepository

ProjectRepository -..|> Repository
Project -..|> AggregateRoot

Repository --|> DomainID
Repository --|> AggregateRoot
AggregateRoot --|> DomainID
AggregateRoot --|> DomainEntity


@enduml